Changes to SeekersHD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -576,7 +576,7 @@
     <string name="channel_name_ftp">Amaze FTP Server</string>
     <string name="channel_description_ftp">Amaze File Manager FTP Server\'s Notifications</string>
 
-    <string name="appbar_name" translatable="false">Amaze</string>
+    <string name="appbar_name" translatable="false">Seekers HD</string>
     <string name="processing">Processing&#8230;</string>
     <string name="failed_no_connection">Failed to load files. Please check your connection.</string>
 
